--- a/templates/index.html
+++ b/templates/index.html
@@ -3,71 +3,23 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Image Gallery</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
-
-        .gallery-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            padding: 20px;
-            max-width: 1200px;
-            width: 100%;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            background-color: white;
-            border-radius: 8px;
-        }
-
-        .gallery-item {
-            flex: 1 1 calc(33.333% - 40px);
-            margin: 10px;
-            border-radius: 8px;
-            overflow: hidden;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .gallery-item img {
-            width: 100%;
-            height: auto;
-            display: block;
-            transition: transform 0.3s ease;
-        }
-
-        .gallery-item img:hover {
-            transform: scale(1.05);
-        }
-
-        @media (max-width: 768px) {
-            .gallery-item {
-                flex: 1 1 calc(50% - 40px);
-            }
-        }
-
-        @media (max-width: 480px) {
-            .gallery-item {
-                flex: 1 1 calc(100% - 40px);
-            }
-        }
-    </style>
+    <title>Cats everyday</title>
+    <link rel="stylesheet" href={{ url_for('static', filename='style.css') }}>
   </head>
   <body>
-
-    <div class="gallery-container">
-      {% for url in image_urls %}
-        <div class="gallery-item">
-          <img src="{{ url }}" alt="Gallery Image">
+  <script src={{ url_for('static', filename='script.js') }}></script>
+    <div class="row">
+      {% for column in image_urls|batch(image_urls|length // 4) %}
+        <div class="column">
+          {% for image_url in column %}
+            <img src="{{ image_url }}" style="width:100%" onclick="openModal(this)">
+          {% endfor %}
         </div>
       {% endfor %}
     </div>
-
+    <div id="myModal" class="modal">
+      <span class="close" onclick="closeModal()">&times;</span>
+      <img class="modal-content" id="img01">
+    </div>
   </body>
 </html>
